--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +12,87 @@
     <link rel="stylesheet" href="assets/css/reset.css">
 
     <!-- Font -->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
 
 </head>
+
 <body>
-    <h1>Titulo</h1>
+    <main>
+        <section class="container">
+            <section class="comment-1">
+                <figure><img src="images/image-daniel.jpg" alt="Foto da pessoa que comentou"></figure>
+                <h2 class="name">Daniel Clifford</h2>
+                <p class="personal-capacity">Verified Graduate</p>
+                <article>
+                    <h1 class="title">I received a job offer mid-course, and the subjects | kearbed were current, if not
+                        more so, in the company I joined. I honestly feel I got wvery penny`s worth</h1>
+                    <p class="testimonials">"I was an EMT for many years before I joined the bootcamp. I've been looking
+                        to make a transition and have heard some people who had an amazing experience here. I signed up
+                        for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next
+                        12 weeks was the best - and most grueling - time of my life. Since completing the course. I've
+                        successfully switched careers, working as a Software Engineer at a BR startup."</p>
+                </article>
+            </section>
+            <section class="comment-2">
+                <figure><img src="images/image-jonathan.jpg" alt="Foto da pessoa que comentou"></figure>
+                <h2 class="name">Jonathan Walters</h2>
+                <p class="personal-capacity">Verified Graduate</p>
+                <article>
+                    <h1 class="title">The team was very supportive and kept me motivated.</h1>
+                    <p class="testimonials">"I started as a total newbie with virtually no coding skills. I now work as
+                        a mobile engineer for a big company. This was one of the best investments I've made in myself"
+                    </p>
+                </article>
+            </section>
+            <section class="comment-3">
+                <figure><img src="images/image-jeanette.jpg" alt="Foto da pessoa que comentou"></figure>
+                <h2 class="name">Jeanette Harmon</h2>
+                <p class="personal-capacity">Verified Graduate</p>
+                <article>
+                    <h1 class="title">An overall wonderful and rewarding experience</h1>
+                    <p class="testimonials">"Tank you for the wonderful experience! I now have a job I really enjoy, and
+                        make a good living while doing something I love."</p>
+                </article>
+            </section>
+            <section class="comment-4">
+                <figure><img src="images/image-patrick.jpg" alt="Foto da pessoa que comentou"></figure>
+                <h2 class="name">Patrick Abrams</h2>
+                <p class="personal-capacity">Verified Graduate</p>
+                <article>
+                    <h1 class="title">Awesome teaching support from TAs who did the bootcamp themselves. Getting
+                        guidance from them and learning from their experiences was easy.</h1>
+                    <p class="testimonials">The staff seem genuinely concerned about my progress which I find really
+                        refreshing. The program gave me the confidence necessary to be able to go of out in the world
+                        and present myself as a capable junior developer. The standard is above the rest. You will get
+                        the personal attention you need from an incredible community of smart and amazing people."</p>
+                </article>
+            </section>
+            <section class="comment-5">
+                <figure><img src="images/image-kira.jpg" alt="Foto da pessoa que comentou"></figure>
+                <h2 class="name">Kira Whuttle</h2>
+                <p class="personal-capacity">Verified Graduate</p>
+                <article>
+                    <h1 class="title">Such a life-changing experience. Highly recommended!</h1>
+                    <p class="testimonials">"Before joining the bootcamp, I've never written a line of code. I needed
+                        some structure from professionals who can help me learn programming step by step. I was
+                        encouraged to enroll by a former student of theirs who can only say wonderful things about the
+                        program. The entire curriculum and staff did not disappoint. They were very hands-on and I never
+                        had to wait long dor assistance. The agile team project, in particular, was outstanding. It took
+                        my learning to the next level in a way that no tutorial cold ever have. In fact, I've often
+                        referred to ir during interviews as an example of my developent experience. It certainly helped
+                        me land a job as a full-stack developer after receiving multiple offers. 100% recommend!"</p>
+                </article>
+            </section>
+        </section>
+    </main>
 </body>
+
 </html>
