--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon-32x32.ico" type="image/x-icon">
 
 </head>
 
