--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section class="comment-1">
                 <div class="container-presentation">
                     <figure class="pictures">
-                        <img src="images/image-daniel.jpg" alt="Foto da pessoa que comentou" class="picture-1">
+                        <img src="./assets/images/image-daniel.jpg" alt="Foto da pessoa que comentou" class="picture-1">
                     </figure>
                     <div class="text">
                         <h2 class="name-white">Daniel Clifford</h2>
@@ -54,7 +54,7 @@
             <section class="comment-2">
                 <div class="container-presentation">
                     <figure class="pictures">
-                        <img src="images/image-jonathan.jpg" alt="Foto da pessoa que comentou" class="picture-2">
+                        <img src="./assets/images/image-jonathan.jpg" alt="Foto da pessoa que comentou" class="picture-2">
                     </figure>
                     <div class="text">
                         <h2 class="name-white">Jonathan Walters</h2>
@@ -74,7 +74,7 @@
             <section class="comment-3">
                 <div class="container-presentation">
                     <figure class="pictures">
-                        <img src="images/image-jeanette.jpg" alt="Foto da pessoa que comentou" class="picture-3">
+                        <img src="./assets/images/image-jeanette.jpg" alt="Foto da pessoa que comentou" class="picture-3">
                     </figure>
                     <div class="text">
                         <h2 class="name">Jeanette Harmon</h2>
@@ -91,7 +91,7 @@
             <section class="comment-4">
                 <div class="container-presentation">
                     <figure class="pictures">
-                        <img src="images/image-patrick.jpg" alt="Foto da pessoa que comentou" class="picture-4">
+                        <img src="./assets/images/image-patrick.jpg" alt="Foto da pessoa que comentou" class="picture-4">
                     </figure>
                     <div class="text">
                         <h2 class="name-white">Patrick Abrams</h2>
@@ -112,7 +112,7 @@
             <section class="comment-5">
                 <div class="container-presentation">
                     <figure class="pictures">
-                        <img src="images/image-kira.jpg" alt="Foto da pessoa que comentou" class="picture-5">
+                        <img src="./assets/images/image-kira.jpg" alt="Foto da pessoa que comentou" class="picture-5">
                     </figure>
                     <div class="text">
                         <h2 class="name">Kira Whuttle</h2>
