--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Testimonials</title>
 
     <!-- Reset -->
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,10 +18,10 @@
         rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon-32x32.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/favicon-32x32.ico" type="image/x-icon">
 
 </head>
 
